--- a/app/views/fruits/edit.html.erb
+++ b/app/views/fruits/edit.html.erb
@@ -8,14 +8,6 @@
     <%= f.text_field :color %>
   </p>
   <p>
-    <%= f.submit 'Create fruit' %>
+    <%= f.submit 'Update fruit' %>
   </p>
-<% end %>
-
-<% @fruits.each do |fruit| %>
-  <ul>
-    <li>
-      <%= link_to "#{fruit.name}", fruit_path(fruit) %>, <%= fruit.color %>
-    </li>
-  </ul>
 <% end %>
